# aurweb

./: .coveragerc  .dockerignore  .editorconfig  .env  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .mailmap  .pre-commit-config.yaml  .travis.yml  AUTHORS  CONTRIBUTING.md  Dockerfile  HACKING  INSTALL  LAUNCH.txt  README  README.md  TESTING  TODO  TRANSLATING  UPGRADING  VERSIONS.txt  alembic.ini  cliff.toml  docker-compose.aur-dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  gunicorn.conf.py  logging.conf  logging.prod.conf  logging.test.conf  poetry.toml  pyproject.toml  pytest.ini  renovate.json  requirements.txt  setup.cfg  setup.py  (+1 more)
.gitlab/issue_templates/: Account Request.md  Bug.md  Feature.md  Feedback.md
.run/: aurweb.spawn.run.xml
.tx/: config
aurweb/: asgi.py  aur_redis.py  auth.py  benchmark.py  cache.py  captcha.py  config.py  cookies.py  db.py  defaults.py  exceptions.py  filters.py  initdb.py  l10n.py  logging.py  prometheus.py  ratelimit.py  redis.py  rpc.py  schema.py  spawn.py  statistics.py  templates.py  testing.py  time.py  util.py
aurweb/archives/: __init__.py
aurweb/auth/: __init__.py  creds.py
aurweb/git/: auth.py  serve.py  update.py  update_common.py  update_legacy.py
aurweb/models/: __init__.py  accepted_term.py  account_type.py  api_rate_limit.py  ban.py  declarative.py  dependency_type.py  group.py  license.py  official_provider.py  package.py  package_base.py  package_blacklist.py  package_comaintainer.py  package_comment.py  package_dependency.py  package_group.py  package_keyword.py  package_license.py  package_notification.py  package_relation.py  package_request.py  package_source.py  package_vote.py  relation_type.py  request_type.py  session.py  ssh_pub_key.py  term.py  tu_vote.py  tu_voteinfo.py  user.py  vote.py  voteinfo.py
aurweb/pkgbase/: actions.py  util.py  validate.py
aurweb/requests/: util.py
aurweb/routers/: __init__.py  accounts.py  auth.py  errors.py  html.py  package_maintainer.py  packages.py  pkgbase.py  requests.py  rpc.py  rss.py  sso.py  trusted_user.py
aurweb/scripts/: adduser.py  aurblup.py  config.py  git_archive.py  mkpkglists.py  notify.py  pkgmaint.py  popupdate.py  rendercomment.py  tuvotereminder.py  usermaint.py  votereminder.py
aurweb/testing/: __init__.py  alpm.py  email.py  filelock.py  git.py  html.py  models.py  prometheus.py  requests.py  smtp.py
aurweb/users/: update.py  util.py  validate.py  verify.py
ci/tf/: .terraform.lock.hcl  main.tf  terraform.tfvars  variables.tf  versions.tf
conf/: aur-sshd.socket  aur-sshd@.service  cgitrc.proto  config.defaults  config.dev  config.proto  fcgiwrap.service.proto  fcgiwrap.socket.proto
deploy/: deployme.sh
doc/: CodingGuidelines  Makefile  docker.md  git-archive.md  git-interface.txt  i18n.md  i18n.txt  maintenance.txt  rpc.txt  sso.txt  web-auth.md
doc/repos/: metadata-repo.md  pkgbases-repo.md  pkgnames-repo.md  users-repo.md
doc/specs/: metadata.md  pkgbases.md  pkgnames.md  popularity.md  users.md
docker/: README.md  ca-entrypoint.sh  cgit-entrypoint.sh  cron-entrypoint.sh  fastapi-entrypoint.sh  git-entrypoint.sh  hypercorn.env  mariadb-entrypoint.sh  mariadb-init-entrypoint.sh  nginx-entrypoint.sh  php-entrypoint.sh  postgres-entrypoint.sh  postgres-init-entrypoint.sh  redis-entrypoint.sh  sharness-entrypoint.sh  smartgit-entrypoint.sh  test-mysql-entrypoint.sh  test-postgres-entrypoint.sh  test-sqlite-entrypoint.sh  tests-entrypoint.sh
docker/config/: aurweb-cron  nginx.conf  prometheus.yml  tempo.yml
docker/health/: ca.sh  cgit.sh  fastapi.sh  mariadb.sh  memcached.sh  nginx.sh  php.sh  postgres.sh  prometheus.sh  redis.sh  smartgit.sh  sshd.sh  tempo.sh
docker/scripts/: install-deps.sh  install-python-deps.sh  run-ca.sh  run-cgit.sh  run-cron.sh  run-fastapi.sh  run-nginx.sh  (+11 more)
examples/: aurweb-git-auth.sh  aurweb-git-serve.sh  aurweb-git-update.sh  aurweb.service  jsonp.html
git-interface/: Makefile  aurinfo.py  config.py  db.py  git-auth.py  git-auth.sh  git-auth.sh.in  git-serve.py  git-update.py
migrations/: README  env.py
po/: Makefile  POTFILES  ar.po  ast.po  aur.pot  aurweb.pot  az.po  az_AZ.po  be.po  bg.po  bn_BD.po  ca.po  ca_ES.po  cs.po  da.po  de.po  de_AT.po  de_DE.po  el.po  el_GR.po  en_FR.po  en_GB.po  en_US.po  eo.po  es.po  es_419.po  et.po  fa.po  fa_IR.po  fi.po  fi_FI.po  fr.po  he.po  hi_IN.po  hr.po  hu.po  hu_HU.po  id.po  id_ID.po  is.po  (+36 more)
schema/: Makefile  aur-schema.sql  gendummydata.py  reloadtestdb.sh
scripts/: aurblup.py  cleanup  config.proto  mkpkglists.py  notify.py  pkgmaint.py  popupdate.py  tuvotereminder.py  uploadbuckets.sh
static/: opensearch.xml
support/: README.txt
templates/: addvote.html  dashboard.html  home.html  index.html  login.html  packages.html  passreset.html  pkgbase.html  register.html  requests.html
test/: Makefile  README.md  conftest.py  setup.sh  sharness.sh  t1100-git-auth.sh  t1100-git-auth.t  t1200-git-serve.sh  t1200-git-serve.t  t1300-git-update.sh  t1300-git-update.t  t1400-git-update-legacy.t  t2100-mkpkglists.sh  t2100-mkpkglists.t  t2200-tuvotereminder.sh  t2200-tuvotereminder.t  t2300-pkgmaint.sh  t2300-pkgmaint.t  t2400-aurblup.sh  t2400-aurblup.t  t2500-notify.sh  t2500-notify.t  t2600-rendercomment.sh  t2600-rendercomment.t  t2700-usermaint.sh  t2700-usermaint.t  test_accepted_term.py  test_account_type.py  test_accounts_routes.py  test_adduser.py  test_api_rate_limit.py  test_asgi.py  test_aurblup.py  test_auth.py  test_auth_routes.py  test_ban.py  test_cache.py  test_captcha.py  test_concurrent_login.py  test_config.py  (+72 more)
tupkg/: README.txt
upgrading/: 1.2.10.txt  1.3.0.txt  1.5.2.txt  1.5.3.txt  1.7.0.txt  1.8.0.txt  1.8.1.txt  1.8.2.txt  1.9.0.txt  1.9.1.txt  2.0.0.txt  2.1.0.txt  2.2.0.txt  2.3.0.txt  3.0.0.txt  3.1.0.txt  3.2.0.txt  3.4.0.txt  3.5.0.txt  4.0.0.txt  4.1.0.txt  4.2.0.txt  4.2.1.txt  4.3.0.txt  4.4.0.txt  4.4.1.txt  4.5.0.txt  4.6.0.txt  4.7.0.txt  4.9.0.txt  5.x.x.txt  longerpkgname.txt  post-checkout
util/: adduser.py  fix-coverage  sendmail
web/: README  README.txt
(+448 files in other folders)
