[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",       # pycodestyle
    "F",       # pyflakes
    "I",       # isort
    "UP032",   # f-string
    "W",       # warnings (mostly whitespace)
]
ignore = [
    "E203",  # whitespace-before-punctuation
    "E741",  # The 'I', 'O', 'l' are ambiguous variable names, used in HTTP forms
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
follow_imports = 'silent'  # https://github.com/python-lsp/pylsp-mypy/issues/81
scripts_are_modules = true  # allow checking all scripts in one invocation
explicit_package_bases = true
exclude = [
    'migrations/',
]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "MySQLdb",
    "alembic.*",
    "authlib.*",
    "bleach",
    "email_validator",
    "fakeredis",
    "fastapi.*",
    "feedgen.*",
    "lxml.*",
    "markdown",
    "opentelemetry.*",
    "paginate",
    "posix_ipc",
    "prometheus_client",
    "prometheus_fastapi_instrumentator.*",
    "pyalpm",
    "pygit2",
    "redis.*",
    "requests",
    "sqlalchemy.*",
    "srcinfo.*",
    "starlette.*",
]

# Poetry build configuration for the aurweb project.
#
# Dependencies:
#   * python >= 3.9
#   * pip
#       * poetry
#       * poetry-dynamic-versioning
#
[tool.poetry]
name = "aurweb"
version = "v6.2.18"
license = "GPL-2.0-only"
description = "Source code for the Arch User Repository's website"
homepage = "https://aur.archlinux.org"
repository = "https://gitlab.archlinux.org/archlinux/aurweb"
documentation = "https://gitlab.archlinux.org/archlinux/aurweb/-/blob/master/README.md"
keywords = ["aurweb", "aur", "Arch", "Linux"]
authors = [
    "Lucas Fleischer <lfleischer@archlinux.org>",
    "Eli Schwartz <eschwartz@archlinux.org>",
    "Kevin Morris <kevr@0cost.org>"
]
maintainers = [
    "Leonidas Spyropoulos <artafinde@archlinux.org>",
    "Mario Oenning <moson@archlinux.org>"
]
packages = [
    { include = "aurweb" }
]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"

[build-system]
requires = ["poetry>=1.1.8", "poetry-dynamic-versioning"]
build-backend = "poetry.masonry.api"

[tool.poetry.urls]
"Repository" = "https://gitlab.archlinux.org/archlinux/aurweb"
"Bug Tracker" = "https://gitlab.archlinux.org/archlinux/aurweb/-/issues"
"Development Mailing List" = "https://lists.archlinux.org/listinfo/aur-dev"
"General Mailing List" = "https://lists.archlinux.org/listinfo/aur-general"
"Request Mailing List" = "https://lists.archlinux.org/listinfo/aur-requests"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"

# poetry-dynamic-versioning is used to produce tool.poetry.version
# based on git tags.

# General
aiofiles = "^24.0.0"
asgiref = "^3.8.1"
bcrypt = "^4.1.2"
bleach = "^6.1.0"
email-validator = "^2.1.1"
fakeredis = "^2.21.3"
feedgen = "^1.0.0"
httpx = "^0.28.0"
itsdangerous = "^2.1.2"
lxml = "^6.0.0"
orjson = "^3.10.0"
pygit2 = "^1.17.0"
python-multipart = "0.0.20"
redis = "^5.0.3"
requests = "^2.31.0"
paginate = "^0.5.6"

# SQL
alembic = "^1.13.1"
mysqlclient = "^2.2.3"
Authlib = "^1.3.0"
Jinja2 = "^3.1.3"
Markdown = "^3.6"
Werkzeug = "^3.0.2"
SQLAlchemy = "^1.4.52"
greenlet = "3.2.4" # Explicitly add greenlet (dependency of SQLAlchemy) for python 3.13 support

# ASGI
uvicorn = "^0.35.0"
gunicorn = "^22.0.0"
Hypercorn = "^0.17.0"
pytest-xdist = "^3.5.0"
filelock = "^3.13.3"
posix-ipc = "^1.1.1"
pyalpm = "^0.10.12"
fastapi = "^0.112.0"
srcinfo = "^0.1.2"
tomlkit = "^0.13.0"

# Tracing
prometheus-fastapi-instrumentator = "^7.0.0"
opentelemetry-api = "^1.26.0"
opentelemetry-sdk = "^1.26.0"
opentelemetry-exporter-otlp-proto-http = "^1.26.0"
opentelemetry-instrumentation-fastapi = "^0.47b0"
opentelemetry-instrumentation-redis = "^0.47b0"
opentelemetry-instrumentation-sqlalchemy = "^0.47b0"

[tool.poetry.dev-dependencies]
coverage = "^7.4.4"
pytest = "^8.1.1"
pytest-asyncio = "^1.0.0"
pytest-cov = "^7.0.0"
pytest-tap = "^3.4"
watchfiles = "^1.0.4"

[tool.poetry.scripts]
aurweb-git-auth = "aurweb.git.auth:main"
aurweb-git-serve = "aurweb.git.serve:main"
aurweb-git-update = "aurweb.git.update:main"
aurweb-aurblup = "aurweb.scripts.aurblup:main"
aurweb-mkpkglists = "aurweb.scripts.mkpkglists:main"
aurweb-notify = "aurweb.scripts.notify:main"
aurweb-pkgmaint = "aurweb.scripts.pkgmaint:main"
aurweb-popupdate = "aurweb.scripts.popupdate:main"
aurweb-rendercomment = "aurweb.scripts.rendercomment:main"
aurweb-votereminder = "aurweb.scripts.votereminder:main"
aurweb-usermaint = "aurweb.scripts.usermaint:main"
aurweb-config = "aurweb.scripts.config:main"
aurweb-adduser = "aurweb.scripts.adduser:main"
aurweb-git-archive = "aurweb.scripts.git_archive:main"
